# canonic

./: .gitignore  .vale.ini  CITATION.cff  CNAME  Cargo.toml  README.md  canonic.toml  flake.nix
.agents/skills/canonic-canned-loop/: SKILL.md
.github/workflows/: ci.yml  ci_docs.yml
corpus/responses/: license-renewal.md  password-reset.md  resp-advisor-account-permission.md  resp-demo-shared-quota.md  resp-demo-software-request.md  resp-gpfs-performance-first-checks.md  resp-gpfs-project-space-performance.md  resp-how-to-request-software-on-cluster.md  resp-local-facilities-data-collection.md  resp-project-space-is-not-a-backup.md  resp-project-space-not-backup.md  resp-small-compute-sbu-calculation.md  resp-small-compute-topup-extension.md  vpn-access.md
docs/: build.sh  export.el  fix_rust_xrefs.py  mkrst.py  requirements.txt
docs/orgmode/: api.org  architecture.org  design.org  index.org  tutorial.org  usage.org
docs/source/: api.rst  architecture.rst  conf.py  design.rst  index.rst  usage.rst
docs/source/_generated/: tutorial-session.txt
docs/source/_static/: custom.css
docs/source/_templates/partials/: extra-head.html
scripts/: mirror-to-gitlab.sh  tutorial-run.sh
scripts/ci/: jira-docker-smoke.sh
scripts/jira-fixture/: Dockerfile  run-import-smoke.sh  server.py
scripts/jira-real/: bootstrap.py  run-import-smoke.sh  seed_issues.py
src/: check.rs  config.rs  convert.rs  corpus.rs  doctor.rs  index.rs  jira_import.rs  lib.rs  lint.rs  main.rs  scaffold.rs  tui.rs
styles/Vocab/canonic/: accept.txt
styles/config/vocabularies/canonic/: accept.txt
tests/: branding_assets.rs  canned_loop.rs  cli_smoke.rs  colleague_ready.rs  jira_free_rest.rs  public_leak_scan.rs  public_metadata.rs  tutorial_path.rs
