[package]
name = "canonic"
version = "0.1.0"
edition = "2021"
description = "Versioned Jira Jira canned-response corpus: markdown source of truth, pandoc jira convert, quality checks, Tantivy search/dedupe"
license = "MIT"
readme = "README.md"
repository = "https://github.com/HaoZeke/canonic"

[[bin]]
name = "canonic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
harper-core = "2.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
