[package]
name = "canonic"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Versioned Jira canned-response corpus: markdown source of truth, pandoc jira convert, quality checks, Tantivy search/dedupe"
license = "MIT"
authors = ["Rohit Goswami <rgoswami@ieee.org>"]
repository = "https://github.com/HaoZeke/canonic"
homepage = "https://github.com/HaoZeke/canonic"
documentation = "https://github.com/HaoZeke/canonic#readme"
readme = "README.md"
keywords = ["jira", "canned-responses", "tantivy", "markdown", "support"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    ".claude/",
    ".codex/",
    ".venv-docs/",
    "docs/build/",
    "target/",
]

[[bin]]
name = "canonic"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
harper-core = "2.5"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tantivy = "0.22"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

